// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`metricFindQuery Collection Collection 1`] = `
Array [
  Object {
    "text": "A",
    "value": "B",
  },
  Object {
    "text": "C",
    "value": "D",
  },
]
`;

exports[`metricFindQuery CollectionLookup CollectionLookup 1`] = `
Array [
  Object {
    "text": "nonprod-server",
    "value": "nonprod-server",
  },
]
`;

exports[`metricFindQuery CollectionLookup CollectionLookup 2`] = `
Array [
  Object {
    "text": "c",
    "value": "c",
  },
]
`;

exports[`metricFindQuery CollectionLookup CollectionLookup 3`] = `Array []`;
